Classes and inheritance

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,6 +9,6 @@
         <div>
             <h2>JavaScript</h2>
         </div>
-        <script src="let_const.js"></script>
+        <script src="classes_inheritance.js"></script>
     </body>
 </html>
