--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,9 @@
     <body>
         <div>
             <h2>JavaScript</h2>
+            <div id="template"></div>
+            <div id="template1"></div>
         </div>
-        <script src="classes_inheritance.js"></script>
+        <script src="template_literals.js"></script>
     </body>
 </html>
