String and number functions

--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,6 @@
             <div id="template"></div>
             <div id="template1"></div>
         </div>
-        <script src="template_literals.js"></script>
+        <script src="string_and_number_methods.js"></script>
     </body>
 </html>
