--- a/examples/index.html
+++ b/examples/index.html
@@ -11,6 +11,6 @@
             <div id="template"></div>
             <div id="template1"></div>
         </div>
-        <script src="default_params_spread_opr.js"></script>
+        <script src="set_map.js"></script>
     </body>
 </html>
