--- a/examples/index.html
+++ b/examples/index.html
@@ -8,7 +8,11 @@
     <body>
         <div>
             <h2>JavaScript</h2>
-            <div id="template"></div>
+            <div>
+                <ul id="template">
+
+                </ul>
+            </div>
             <div id="template1"></div>
         </div>
         <script src="promises.js"></script>
