--- a/examples/index.html
+++ b/examples/index.html
@@ -15,6 +15,6 @@
             </div>
             <div id="template1"></div>
         </div>
-        <script src="promises.js"></script>
+        <script src="generators.js"></script>
     </body>
 </html>
